--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -2,12 +2,13 @@
   min-width: 320px;
   max-width: 375px;
   height: 500px;
-  overflow: auto;
-  padding: 50px 20px 20px;
+  overflow: scroll;
+  padding: 50px 20px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
   box-shadow: rgb(64 68 90 / 20%) 0px 32px 44px 0px;
   margin: 0 auto;
+  position: relative;
 }
 
 .messages-list {
