--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -1,9 +1,9 @@
 .chat {
   min-width: 320px;
   max-width: 375px;
-  height: 550px;
-  overflow: scroll;
-  padding: 50px 20px 0px;
+  height: 600px;
+  overflow: auto;
+  padding: 20px 20px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
   box-shadow: rgb(64 68 90 / 20%) 0px 32px 44px 0px;
@@ -14,5 +14,9 @@
 .messages-list {
   list-style-type: none;
   padding: 0;
-  min-height: 440px;
+  min-height: 485px;
+}
+
+.date {
+  color: #8b8b8b;
 }
