Feature: Add bot typing loader

--- a/src/Components/Message.css
+++ b/src/Components/Message.css
@@ -11,30 +11,32 @@
   margin-right: 0.5rem;
 }
 
-.human-message{
+.human-message {
   justify-content: flex-end;
 }
 
 .text-message {
   padding: 1rem;
-  min-height: 20px;
   max-width: 200px;
+  min-width: 50px;
   text-align: start;
+  display: flex;
+  justify-content: center;
 }
 
 .human-text-message {
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   border-radius: 15px 15px 0 15px;
 }
 
 .bot-text-message {
-  color: #FFF;
-  background-color: #0584FE;
+  color: #fff;
+  background-color: #0584fe;
   border-radius: 15px 15px 15px 0;
 }
 
 .time {
-  color: #AEC8DC;
+  color: #aec8dc;
   font-size: 14px;
   margin-top: 0.3rem;
 }
