Use bot avatar from cdn

--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -9,6 +9,7 @@
   box-shadow: rgb(64 68 90 / 20%) 0px 32px 44px 0px;
   margin: 0 auto;
   position: relative;
+  text-align: center;
 }
 
 .messages-list {
