Page styling and responsive design

--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -1,8 +1,7 @@
 .chat {
   min-width: 320px;
-  max-width: 375px;
   height: 600px;
-  overflow: auto;
+  overflow: overlay;
   padding: 20px 20px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
@@ -10,6 +9,18 @@
   margin: 0 auto;
   position: relative;
   text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .chat {
+    min-width: auto;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .chat {
+    width: 85%;
+  }
 }
 
 .messages-list {
