--- a/src/Components/ChatButtons.css
+++ b/src/Components/ChatButtons.css
@@ -8,6 +8,9 @@
   bottom: 0;
   padding: 0.5rem 0 1rem;
   background-color: var(--secondary);
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
 }
 
 .chat-buttons > button {
@@ -18,12 +21,20 @@
   padding: 0.5rem 1rem;
   font-size: 16px;
   cursor: pointer;
-  margin-inline: 0.5rem;
-  transition: .2s;
+  margin-inline: 0.3rem;
+  transition: 0.2s;
   font-weight: bold;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .chat-buttons > button:hover {
   background-color: var(--primary);
   color: var(--secondary);
+}
+
+@media only screen and (max-width: 500px) {
+  .chat-buttons > button {
+    font-size: 14px;
+  }
 }
