--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -1,7 +1,7 @@
 .chat {
   min-width: 320px;
   height: 600px;
-  overflow: overlay;
+  overflow: scroll;
   padding: 20px 20px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
