--- a/src/Components/ChatButtons.css
+++ b/src/Components/ChatButtons.css
@@ -4,6 +4,10 @@
 }
 
 .chat-buttons {
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
   position: sticky;
   bottom: 0;
   padding: 0.5rem 0 1rem;
