--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -1,7 +1,6 @@
 .chat {
   min-width: 320px;
   height: 600px;
-  overflow: scroll;
   padding: 20px 20px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
@@ -11,7 +10,7 @@
   text-align: center;
 }
 
-.chat::-webkit-scrollbar{
+.messages-list::-webkit-scrollbar{
   width: 0;
 }
 
@@ -23,9 +22,10 @@
 }
 
 .messages-list {
+  overflow-y: scroll;
   list-style-type: none;
   padding: 0;
-  min-height: 485px;
+  height: 485px;
 }
 
 .date {
