--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -1,7 +1,7 @@
 .chat {
-  min-width: 320px;
+  min-width: 350px;
   height: 600px;
-  padding: 20px 20px 0px;
+  padding: 20px 10px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
   box-shadow: rgb(64 68 90 / 20%) 0px 32px 44px 0px;
@@ -10,14 +10,28 @@
   text-align: center;
 }
 
-.messages-list::-webkit-scrollbar{
-  width: 0;
+.messages-list::-webkit-scrollbar {
+  width: 4px; 
+}
+.messages-list::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+}
+.messages-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.messages-list::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+.messages-list::-webkit-scrollbar-thumb:active {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 600px) {
   .chat {
     min-width: auto;
-    width: 80vw;
+    width: 85vw;
   }
 }
 
@@ -26,6 +40,7 @@
   list-style-type: none;
   padding: 0;
   height: 485px;
+  padding-inline: 5px;
 }
 
 .date {
