--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -4,7 +4,8 @@
   padding: 20px 10px 0px;
   background: rgb(255, 255, 255);
   border-radius: 50px;
-  box-shadow: rgb(64 68 90 / 20%) 0px 32px 44px 0px;
+  box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px,
+    rgb(0 0 0 / 30%) 0px 30px 60px -30px;
   position: relative;
   text-align: center;
 }
@@ -72,21 +73,3 @@
   z-index: 0;
   transform: translateX(-20%);
 }
-/* @media (min-width: 600px) and (max-width: 900px) {
-  .background-blob {
-    top: -50px;
-    left: 50%;
-    width: 100%;
-    transform: translateX(-50%);
-    max-height: 700px;
-  }
-}
-@media (min-width: 420px) and (max-width: 600px) {
-  .background-blob {
-    top: -50px;
-    left: 50%;
-    width: 100%;
-    transform: translateX(-50%);
-    max-height: 700px;
-  }
-} */
